--- a/Code/site/_posts/2015-01-05-test-post.markdown
+++ b/Code/site/_posts/2015-01-05-test-post.markdown
@@ -1,13 +1,14 @@
 ---
 layout:         post
-title:          "Sanctuary: EP"
+title:          "Album of the Week"
 date:           2015-01-05 3:26
 categories:     aotw
+background-image:    "/assets/backgrounds/KoanSoundSanctuary.jpg"
+banner-color:   "#957186"
 
 artist:         Koan Sound & Asa
 album:          Sanctuary EP
 link:           "http://www.soundcloud.com/koan-sound"
-album-image:    "/assets/backgrounds/KoanSoundSanctuary.jpg"
 ---
 
 Lorem ipsum dolor sit amet, nonumy doctus discere cu est. Vel in novum nobis scaevola. Stet eius inani cu vix, eu placerat inimicus mea. Cu eos fugit libris.
